--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1",
+    "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
